# jpod

./: README.md  add_data.sh  create_jpod.sqlite  create_venv.sh  data_gen.py  data_insert.py  jpod_augment.sh  jpod_base.py  jpod_create.sqlite  jpod_launch.sh  jpod_update.py  launch_jpod.sh  main.py  main.sh  main_analysis_jpod  pyproject.toml  requirements.txt  update.py  update_jpod.sh
data/: acemoglu_ai_keywords.csv  ai_dist_region.csv  bloom_tech.csv  key_words_tech.csv  regio_grid.csv
docs/: jpod_manual.md  runtimes.md  unique_postings_batch.md
eval/: between_employer_duplicates.py  geo_representativeness.py  jpod_eval.py  jpod_eval.sh  token_based_duplicates.py  within_employer_duplicates.py
examples/: README.md  jpod_ex.R  jpod_ex.py
jpod/: __init__.py  add_geogrid.py  assign_geo.py  clean_duplicates.py  config.py  datagen.py  detect_ai.py  detect_disruptech.py  insert_ai.py  insert_base.py  insert_disruptech.py  insert_emtech.py  insert_geo.py  jpod_update.py  navigate.py  queries.py  tech_keywords.py  tests.py  translate.py  translate_keywords.py
scicore/: download_postings.py  jpod_augment.sh  jpod_create.sqlite  jpod_launch.sh  jpod_test.sh  test_db.py  test_db.sh  test_db.sqlite
scripts/: add_geogrid.py  assign_geo.py  check_updated_files.py  clean_duplicates.py  clean_tables.py  create_test_db.py  detect_ai.py  detect_disruptech.py  download_postings.py  insert_base.py  jpod_index.sqlite  jpod_test_create.sqlite  jpod_update.py  test_db.py  translate_keywords.py  uniq_ids.py
src/: create_jpod.sqlite  data_gen.py  data_insert.py  launch_jpod.sh  (+2 more)
(+55 files in other folders)
