[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jpod"
version = "0.1.0"
description = "Maintainance package for the CIEB job postings database"
authors = [
  {name = "Matthias Nigggli", email = "matthias.niggli@unibas.ch"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "googletrans",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jpod"]
exclude = ["ntec.__pycache__", "tests"]