[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jpod"
version = "0.1.0"
description = "Maintainance package for the CIEB job postings database"
authors = [
  {name = "Matthias Niggli", email = "matthias.niggli@unibas.ch"},
  {name = "Christian Rutzer", email = "christian.rutzer@unibas.ch"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
dependencies = [
    "numpy == 1.19.2",
    "pandas == 1.1.3",
    "googletrans == 3.1.0a0",
    "matplotlib == 3.5.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jpod"]
exclude = ["ntec.__pycache__", "tests"]
